crates/rome_cli/tests/snapshots/main_commands_format/applies_custom_configuration_over_config_file_issue_3175_v1.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
## `biome.json`

```json
{
  "formatter": {
    "indentStyle": "space",
    "indentSize": 2,
    "lineWidth": 120
  }
}
```

## `file.js`

```js
import React from 'react';

```

# Emitted Messages

```block
Compared 1 file(s) in <TIME>
```


