crates/rome_cli/tests/snapshots/main_commands_format/applies_custom_configuration_over_config_file_issue_3175_v2.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
## `biome.json`

```json
{
  "javascript": {
    "formatter": {
      "quoteStyle": "single"
    }
  }
}
```

## `file.js`

```js
function f() {
  return 'hey';
}

```

# Emitted Messages

```block
Compared 1 file(s) in <TIME>
```


