crates/rome_cli/tests/snapshots/main_commands_format/custom_config_file_path.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
## `/test/rome.json`

```json
{
  "formatter": {
    "enabled": true,
    "lineWidth": 160,
    "indentStyle": "space",
    "indentSize": 6
  }
}

```

## `file.js`

```js
function f() {
      return { a, b };
}

```

# Emitted Messages

```block
rome.json internalError/fs ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! The configuration file rome.json is deprecated. Use biome.json instead.
  

```

```block
Formatted 1 file(s) in <TIME>
```


