crates/rome_cli/tests/snapshots/main_commands_format/does_not_format_if_files_are_listed_in_ignore_option.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
## `biome.json`

```json
{
  "files": {
    "ignore": ["test1.js"]
  },
  "formatter": {
    "enabled": true,
    "ignore": ["test2.js"]
  }
}
```

## `test1.js`

```js
  statement(  )  
```

## `test2.js`

```js
  statement(  )  
```

# Termination Message

```block
internalError/io ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × No files were processed in the specified paths.
  


```

# Emitted Messages

```block
Formatted 0 file(s) in <TIME>
```


