crates/rome_cli/tests/snapshots/main_commands_format/does_not_format_ignored_files.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
## `biome.json`

```json
{
  "formatter": {
    "enabled": true,
    "ignore": ["test.js"]
  }
}
```

## `test.js`

```js
  statement(  )  
```

# Termination Message

```block
internalError/io ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × No files were processed in the specified paths.
  


```

# Emitted Messages

```block
Formatted 0 file(s) in <TIME>
```


