crates/rome_cli/tests/snapshots/main_commands_format/file_too_large_config_limit.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
## `biome.json`

```json
{
  "files": {
    "maxSize": 16
  }
}
```

## `format.js`

```js
statement1();
statement2();
```

# Termination Message

```block
internalError/io ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × No files were processed in the specified paths.
  


```

# Emitted Messages

```block
format.js format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Size of format.js is 27 B which exceeds configured maximum of 16 B for this project. The file size limit exists to prevent us inadvertently slowing down and loading large files that we shouldn't.
  

```

```block
Compared 1 file(s) in <TIME>
```

```block
Skipped 1 file(s)
```


