crates/rome_cli/tests/snapshots/main_commands_format/format_is_disabled.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
## `file.js`

```js

function f() {
return { something }
}

```

## `rome.json`

```json
{
  "formatter": {
    "enabled": false
  }
}

```

# Termination Message

```block
internalError/io ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × No files were processed in the specified paths.
  


```

# Emitted Messages

```block
Formatted 0 file(s) in <TIME>
```


